libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/continue/unresolved-value.jsonc
//@ run: pass
//@ description: Tests that an unresolved value (function `bit_shl`) is handled by dummy replacement, allowing lowering to continue.
//@ suite#continue: true
[
  "shl",
  //~^ ERROR cannot find value `shl` in this scope
  { "#literal": 1 },
  { "#literal": 4 }
]
